--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!--Navbar -->
+    <nav id="navbar"></nav>
+    <div class="navbar_logo">
+        <i class="fab fa-diaspora"></i>
+        <a href="#">Kina</a>
+    </div>
+    <div class="navbar_menu">
+        <ul class="navbar_menu">
+            <li class="navbar_menu_item">Home</li>
+            <li class="navbar_menu_item">About</li>
+            <li class="navbar_menu_item">Skills</li>
+            <li class="navbar_menu_item">My work</li>
+            <li class="navbar_menu_item">Testimonial</li>
+            <li class="navbar_menu_item">Contact</li>
+        </ul>
+    </div>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="tesimonials"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
