--- a/index.html
+++ b/index.html
@@ -15,21 +15,33 @@
 </head>
 <body>
     <!--Navbar -->
-    <nav id="navbar"></nav>
-    <div class="navbar_logo">
-        <i class="fab fa-diaspora"></i>
-        <a href="#">Kina</a>
-    </div>
-    <div class="navbar_menu">
-        <ul class="navbar_menu">
-            <li class="navbar_menu_item">Home</li>
-            <li class="navbar_menu_item">About</li>
-            <li class="navbar_menu_item">Skills</li>
-            <li class="navbar_menu_item">My work</li>
-            <li class="navbar_menu_item">Testimonial</li>
-            <li class="navbar_menu_item">Contact</li>
-        </ul>
-    </div>
+    <nav id="navbar">
+        <div class="navbar_logo">
+            <i class="fab fa-diaspora"></i>
+            <a href="#">Kina</a>
+        </div>
+        <div class="navbar_menu">
+            <ul class="navbar_menu">
+                <li class="navbar_menu_item">Home</li>
+                <li class="navbar_menu_item">About</li>
+                <li class="navbar_menu_item">Skills</li>
+                <li class="navbar_menu_item">My work</li>
+                <li class="navbar_menu_item">Testimonial</li>
+                <li class="navbar_menu_item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/cat-solid.png" 
+        alt="Kina's profile photo" 
+        class="home__avatar"
+        />
+        <h1 class="home__title">Hello, <br/> I'm Kina</h1>
+        <h2 class="home_description">Data Aanalysist, Consultant, Designer, Programmer</h2>
+        <button class="home__contact">Contact Me</button>
+
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
