--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- Home -->
     <section id="home">
         <img src="imgs/cat-solid.png" 
@@ -42,8 +43,53 @@
         <button class="home__contact">Contact Me</button>
 
     </section>
+
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>내 소개 (경력, 하고 싶은거, 하는거 등)</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major_icon">
+                    <i class="fas fa-database"></i>
+                </div>
+                <div class="major_title">Data Analysis</div>
+                <div class="major_description">
+                    Python, R, Excel
+                </div>
+            </div>
+            <div class="major">
+                <div class="major_icon">
+                    <i class="fas fa-chart-pie"></i>
+                </div>
+                <div class="major_title">Visualizing</div>
+                <div class="major_description">
+                    Tableau, PowerPoint, Python, R, Excel
+                </div>
+            </div>
+            <div class="major">
+                <div class="major_icon">
+                    <i class="fas fa-lightbulb"></i>
+                </div>
+                <div class="major_title">Insight</div>
+                <div class="major_description">
+                    Gain insights and create new value through data analytics and visualization
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <i class="fas fa-university"></i>
+                <p class="job_name">Computer Science, Catholic University</p>
+                <p class="job_period">2014.02 ~ 2019.02</p>
+            </div>
+            <div class="job">
+                <i class="far fa-building"></i>
+                <p class="job_name">Data Consultant, EWC</p>
+                <p class="job_period">2019.01 ~ Until now</p>
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
