--- a/index.html
+++ b/index.html
@@ -91,9 +91,113 @@
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            Experience with all phases of the software life-cyle.
+            Passion for learning new technologies.
+            Capable of working within a team environment and independently.
+            Ablility to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>Analytics</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>Insight</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>Visualizing</span>
+                        <span>95%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>Fontend</span>
+                        <span>10%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>IoT</span>
+                        <span>15%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Python</span></li>
+                        <li><span>R</span></li>
+                        <li><span>Tableau</span></li>
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Excel</span></li>
+                        <li><span>PowerPoint</span></li>
+                        <li><span>Arduino</span></li>
+                    </ul>
+                </div>
+                <div class="ect">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>Statics</span></li>
+                        <li><span>Design</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn">Analytics<span class="category__count">5</span></button>
+            <button class="category__btn">Visualizing<span class="category__count">2</span></button>
+            <button class="category__btn">IoT<span class="category__count">1</span></button>
+        </div>
+
+        <div class="work__projects">
+            <a href="http://github.com"
+            class="project"
+            target="blank">
+            <img src="" alt="준비중">
+            <div class="project__description">
+                <h3>Youtube Site</h3>
+                <span>Clone coding with HTML and CSS</span>
+            </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="tesimonials"></section>
     <!-- Contact -->
