--- a/index.html
+++ b/index.html
@@ -191,16 +191,46 @@
             class="project"
             target="blank">
             <img src="" alt="준비중">
-            <div class="project__description">
+            <!-- #png compressor로 이미지 크기 맞춰주기 -->
+            <div class="project__description"> 
                 <h3>Youtube Site</h3>
                 <span>Clone coding with HTML and CSS</span>
             </div>
             </a>
+            <a href="http://github.com"
+            class="project"
+            target="blank">
+            <img src="" alt="준비중">
+            <div class="project__description">
+                <h3>Youtube Site</h3>
+                <span>Clone coding with HTML and CSS2</span>
+            </div>
+            </a>
+            <a href="http://github.com"
+            class="project"
+            target="blank">
+            <img src="" alt="준비중">
+            <div class="project__description">
+                <h3>Youtube Site</h3>
+                <span>Clone coding with HTML and CSS3</span>
+            </div>
+            </a>
         </div>
     </section>
-    <!-- Testimonials -->
-    <section id="tesimonials"></section>
+
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact_title">Let's talk</h1>
+        <h2 class="contact_email">isawthat77@naver.com</h2>
+        <div class="contact_links">
+            <a href="http://github.com" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fa fa-instagram"></i>
+            </a>
+        </div>
+        <p class="contact_rights">2020 KinaKim - All rights reserved</p>
+    </section>
 </body>
 </html>
