--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
         </div>
         <div class="navbar_menu">
             <ul class="navbar_menu">
-                <li class="navbar_menu_item">Home</li>
+                <li class="navbar_menu_item active">Home</li>
                 <li class="navbar_menu_item">About</li>
                 <li class="navbar_menu_item">Skills</li>
                 <li class="navbar_menu_item">My work</li>
-                <li class="navbar_menu_item">Testimonial</li>
                 <li class="navbar_menu_item">Contact</li>
             </ul>
         </div>
@@ -34,12 +33,12 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/cat-solid.png" 
+        <img src="imgs/mypicture.jpeg" 
         alt="Kina's profile photo" 
         class="home__avatar"
         />
         <h1 class="home__title">Hello, <br/> I'm Kina</h1>
-        <h2 class="home_description">Data Aanalysist, Consultant, Designer, Programmer</h2>
+        <h2 class="home__description">Data Aanalysist, Consultant, Programmer</h2>
         <button class="home__contact">Contact Me</button>
 
     </section>
@@ -227,7 +226,7 @@
                 <i class="fab fa-github"></i>
             </a>
             <a href="#" target="_blank">
-                <i class="fa fa-instagram"></i>
+                <i class="fab fa-instagram"></i>
             </a>
         </div>
         <p class="contact_rights">2020 KinaKim - All rights reserved</p>
