--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section section_container">
         <h1>About me</h1>
-        <p>내 소개 (경력, 하고 싶은거, 하는거 등)</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat corrupti ipsam provident magni rem reiciendis nam? Quisquam, deleniti a quae, magni eligendi debitis quod maxime, et commodi mollitia fugit? Harum!</p>
         <div class="about__majors">
             <div class="major">
                 <div class="major_icon">
@@ -63,35 +63,39 @@
                 </div>
                 <div class="major_title">Visualizing</div>
                 <div class="major_description">
-                    Tableau, PowerPoint, Python, R, Excel
+                    Tableau, PowerPoint
                 </div>
             </div>
             <div class="major">
                 <div class="major_icon">
                     <i class="fas fa-lightbulb"></i>
                 </div>
-                <div class="major_title">Insight</div>
+                <div class="major_title">Ect</div>
                 <div class="major_description">
-                    Gain insights and create new value through data analytics and visualization
+                    Git, Git-hub, SQL, Linux <br>HTML, CSS, Matlab
                 </div>
             </div>
         </div>
         <div class="about__jobs">
             <div class="job">
                 <i class="fas fa-university"></i>
-                <p class="job_name">Computer Science, Catholic University</p>
-                <p class="job_period">2014.02 ~ 2019.02</p>
+                <div class="job__description">
+                    <p class="job_name">Computer Science, Catholic University</p>
+                    <p class="job_period">2014.02 ~ 2019.02</p>
+                </div>
             </div>
             <div class="job">
                 <i class="far fa-building"></i>
-                <p class="job_name">Data Consultant, EWC</p>
-                <p class="job_period">2019.01 ~ Until now</p>
+                <div class="job__description">
+                    <p class="job_name">Data Consultant, EWC</p>
+                    <p class="job_period">2019.01 ~ Until now</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
 
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -109,7 +113,7 @@
                         <span>80%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -118,7 +122,7 @@
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -127,7 +131,7 @@
                         <span>95%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 95%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -136,16 +140,16 @@
                         <span>10%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 10%;"></div>
                     </div>
                 </div>
                 <div class="skill">
                     <div class="skill_description">
                         <span>IoT</span>
-                        <span>15%</span>
+                        <span>25%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 15%;"></div>
                     </div>
                 </div>
             </div>
@@ -153,12 +157,12 @@
                 <div class="tools">
                     <h3 class="skillset__title">Tools</h3>
                     <ul class="tools__list">
-                        <li><span>Python</span></li>
+                        <li><span>Jupyter Notebook</span></li>
+                        <li><span>Spyder</span></li>
+                        <li><span>PostgreSQL</span></li>
                         <li><span>R</span></li>
                         <li><span>Tableau</span></li>
                         <li><span>Visual Studio Code</span></li>
-                        <li><span>Excel</span></li>
-                        <li><span>PowerPoint</span></li>
                         <li><span>Arduino</span></li>
                     </ul>
                 </div>
@@ -166,7 +170,7 @@
                     <h3 class="skillset__title">Etc</h3>
                     <ul class="etc__list">
                         <li><span>Git</span></li>
-                        <li><span>Statics</span></li>
+                        <li><span>New Language</span></li>
                         <li><span>Design</span></li>
                     </ul>
                 </div>
@@ -175,7 +179,7 @@
     </section>
     
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -218,7 +222,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact_title">Let's talk</h1>
         <h2 class="contact_email">isawthat77@naver.com</h2>
         <div class="contact_links">
