--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn active">All<span class="category__count">8</span></button>
             <button class="category__btn">Analytics<span class="category__count">5</span></button>
             <button class="category__btn">Visualizing<span class="category__count">2</span></button>
             <button class="category__btn">IoT<span class="category__count">1</span></button>
