CSS : fix section container

--- a/index.html
+++ b/index.html
@@ -180,44 +180,46 @@
     
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
-        <h3>Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn active">All<span class="category__count">8</span></button>
-            <button class="category__btn">Analytics<span class="category__count">5</span></button>
-            <button class="category__btn">Visualizing<span class="category__count">2</span></button>
-            <button class="category__btn">IoT<span class="category__count">1</span></button>
-        </div>
-
-        <div class="work__projects">
-            <a href="http://github.com"
-            class="project"
-            target="blank">
-            <img src="" alt="준비중">
-            <!-- #png compressor로 이미지 크기 맞춰주기 -->
-            <div class="project__description"> 
-                <h3>Youtube Site</h3>
-                <span>Clone coding with HTML and CSS</span>
+        <div class="sectioin_container">
+            <h1>My work</h1>
+            <h3>Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn active">All<span class="category__count">8</span></button>
+                <button class="category__btn">Analytics<span class="category__count">5</span></button>
+                <button class="category__btn">Visualizing<span class="category__count">2</span></button>
+                <button class="category__btn">IoT<span class="category__count">1</span></button>
             </div>
-            </a>
-            <a href="http://github.com"
-            class="project"
-            target="blank">
-            <img src="" alt="준비중">
-            <div class="project__description">
-                <h3>Youtube Site</h3>
-                <span>Clone coding with HTML and CSS2</span>
+    
+            <div class="work__projects">
+                <a href="http://github.com"
+                class="project"
+                target="blank">
+                <img src="" alt="준비중">
+                <!-- #png compressor로 이미지 크기 맞춰주기 -->
+                <div class="project__description"> 
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+                </a>
+                <a href="http://github.com"
+                class="project"
+                target="blank">
+                <img src="" alt="준비중">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS2</span>
+                </div>
+                </a>
+                <a href="http://github.com"
+                class="project"
+                target="blank">
+                <img src="" alt="준비중">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS3</span>
+                </div>
+                </a>
             </div>
-            </a>
-            <a href="http://github.com"
-            class="project"
-            target="blank">
-            <img src="" alt="준비중">
-            <div class="project__description">
-                <h3>Youtube Site</h3>
-                <span>Clone coding with HTML and CSS3</span>
-            </div>
-            </a>
         </div>
     </section>
 
