--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li class="navbar_menu_item">Contact</li>
             </ul>
         </div>
+        <!-- Toggle button -->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
 
     <!-- Home -->
