--- a/index.html
+++ b/index.html
@@ -100,83 +100,85 @@
     <!-- Skills -->
 
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
-        <p>
-            Experience with all phases of the software life-cyle.
-            Passion for learning new technologies.
-            Capable of working within a team environment and independently.
-            Ablility to plan and time schedule, work under strict time pressure and adapt quickly when needed.
-        </p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>Analytics</span>
-                        <span>80%</span>
+        <div class="section_container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
+            <p>
+                Experience with all phases of the software life-cyle.
+                Passion for learning new technologies.
+                Capable of working within a team environment and independently.
+                Ablility to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+            </p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">Skills</h3>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Analytics</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 80%;"></div>
+                        </div>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width: 80%;"></div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Insight</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Visualizing</span>
+                            <span>95%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 95%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Fontend</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 10%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>IoT</span>
+                            <span>25%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 15%;"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>Insight</span>
-                        <span>90%</span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>Jupyter Notebook</span></li>
+                            <li><span>Spyder</span></li>
+                            <li><span>PostgreSQL</span></li>
+                            <li><span>R</span></li>
+                            <li><span>Tableau</span></li>
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>Arduino</span></li>
+                        </ul>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width: 90%;"></div>
+                    <div class="etc">
+                        <h3 class="skillset__title">Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                            <li><span>New Language</span></li>
+                            <li><span>Design</span></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>Visualizing</span>
-                        <span>95%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width: 95%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>Fontend</span>
-                        <span>10%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width: 10%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>IoT</span>
-                        <span>25%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width: 15%;"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
-                    <ul class="tools__list">
-                        <li><span>Jupyter Notebook</span></li>
-                        <li><span>Spyder</span></li>
-                        <li><span>PostgreSQL</span></li>
-                        <li><span>R</span></li>
-                        <li><span>Tableau</span></li>
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>Arduino</span></li>
-                    </ul>
-                </div>
-                <div class="ect">
-                    <h3 class="skillset__title">Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>New Language</span></li>
-                        <li><span>Design</span></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -184,7 +186,7 @@
     
     <!-- Work -->
     <section id="work" class="section">
-        <div class="sectioin_container">
+        <div class="section_container">
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
