JS : home transparent

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/mypicture.jpeg" 
-        alt="Kina's profile photo" 
-        class="home__avatar"
-        />
-        <h1 class="home__title">Hello, <br/> I'm Kina</h1>
-        <h2 class="home__description">Data Aanalysist, Consultant, Programmer</h2>
-        <button class="home__contact">Contact Me</button>
-
+        <div class="home_container">
+            <img src="imgs/mypicture.jpeg" 
+            alt="Kina's profile photo" 
+            class="home__avatar"
+            />
+            <h1 class="home__title">Hello, <br/> I'm Kina</h1>
+            <h2 class="home__description">Data Aanalysist, Consultant, Programmer</h2>
+            <button class="home__contact">Contact Me</button>
+        </div>
     </section>
 
     <!-- About -->
