--- a/index.html
+++ b/index.html
@@ -244,5 +244,10 @@
         </div>
         <p class="contact_rights">2020 KinaKim - All rights reserved</p>
     </section>
+
+    <!-- Arrow Up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
