--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <h1 class="contact_title">Let's talk</h1>
         <h2 class="contact_email">isawthat77@naver.com</h2>
         <div class="contact_links">
-            <a href="http://github.com" target="_blank">
+            <a href="https://github.com/kina94?tab=repositories" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
             <a href="#" target="_blank">
